# gpd

./: CMakeLists.txt
include/gpd/util/: cloud.h
src/gpd/candidate/: hand_set.cpp
src/gpd/descriptor/: image_12_channels_strategy.cpp  image_15_channels_strategy.cpp  image_generator.cpp
src/gpd/net/: eigen_classifier.cpp
src/gpd/util/: cloud.cpp
